// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`should match the snapshot when the loading is false 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="fui-DialogSurface__backdrop r1e18s3l"
  />
  .emotion-0 {
  overflow: hidden;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1rem 0;
}

<div
    aria-modal="true"
    class="fui-DialogSurface r1u3t6p6"
    role="dialog"
    tabindex="-1"
  >
    <form>
      <div
        class="fui-DialogBody rhwx3p8"
      >
        <h2
          class="fui-DialogTitle rxjm636 ___mh25s00_kwrsjh0 fsyjsko"
        >
          New file
        </h2>
        <div
          class="fui-DialogContent r1v5zwsm emotion-0"
        >
          <div
            class="emotion-1"
          >
            <span
              class="fui-Input r1oeeo9n ___xay2ks0_8jjmwj0 f11gcy0p fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
            >
              <input
                aria-label="File name"
                class="fui-Input__input r12stul0 ___1q6bera_bzdj540 ffczdla"
                placeholder="File name"
                type="text"
                value="1"
              />
              <span
                class="fui-Input__contentAfter r1572tok"
              >
                .md
              </span>
            </span>
          </div>
        </div>
        <div
          class="fui-DialogActions rhfpeu0 ___1w6yguj_o4tqhn0 f1a7i8kp fd46tj4 fsyjsko f1n00o3b f1mvsp37 flbz1vp"
        >
          <button
            aria-label="Save"
            class="fui-Button r1alrhcs ___lkb4hm0_1iawwqv ffp7eso f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1phragk f15wkkf3 f1s2uweq fr80ssc f1ukrpxl fecsdlb f1rq72xc fnp9lpt f1h0usnq fs4ktlq f16h9ulv fx2bmrt f1d6v5y2 f1nz3ub2 fag2qd2 fmvhcg7 f1o3dhpw f14bpyus fqc85l4 f1h3a8gf fkiggi6 f8gmj8i f1ap8nzx f1igan7k fjag8bx f1v3eptx fpelvsg f1r9enuy fdvt4n0 f1l34yyb f1grx941 fqfbdvs f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv fixhny3 feygou5"
            title="Save"
            type="submit"
          >
            Save
          </button>
          <button
            aria-label="Cancel"
            class="fui-Button r1alrhcs"
            data-tabster="{"restorer":{"type":1}}"
            title="Cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </form>
  </div>
  <span
    hidden=""
  />
  <div
    class="fui-FluentProvider fui-FluentProvider_r_2_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      data-testid="test-ModalDialog"
    >
      <span
        hidden=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`should match the snapshot when the loading is true 1`] = `
<DocumentFragment>
  <div
    aria-hidden="true"
    class="fui-DialogSurface__backdrop r1e18s3l"
  />
  .emotion-0 {
  overflow: hidden;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 1rem 0;
}

<div
    aria-modal="true"
    class="fui-DialogSurface r1u3t6p6"
    role="dialog"
    tabindex="-1"
  >
    <form>
      <div
        class="fui-DialogBody rhwx3p8"
      >
        <h2
          class="fui-DialogTitle rxjm636 ___mh25s00_kwrsjh0 fsyjsko"
        >
          New file
        </h2>
        <div
          class="fui-DialogContent r1v5zwsm emotion-0"
        >
          <div
            class="emotion-1"
          >
            <span
              class="fui-Input r1oeeo9n ___xay2ks0_8jjmwj0 f11gcy0p fvcxoqz f1ub3y4t f1l4zc64 f1m52nbi f8vnjqi fz1etlk f1klwx88 f1hc16gm"
            >
              <input
                aria-label="File name"
                class="fui-Input__input r12stul0 ___1q6bera_bzdj540 ffczdla"
                placeholder="File name"
                type="text"
                value=""
              />
              <span
                class="fui-Input__contentAfter r1572tok"
              >
                .md
              </span>
            </span>
          </div>
        </div>
        <div
          class="fui-DialogActions rhfpeu0 ___1w6yguj_o4tqhn0 f1a7i8kp fd46tj4 fsyjsko f1n00o3b f1mvsp37 flbz1vp"
        >
          <button
            aria-label="Save"
            class="fui-Button r1alrhcs ___jiv9070_dxr8m30 f1bg9a2p f1p3nwhy f11589ue f1q5o8ev f1pdflbu f1s2aq7o f1falr9n f1s2uweq fr80ssc f1ukrpxl fecsdlb fvgxktp f1t6o4dc f1h0usnq fs4ktlq f16h9ulv fx2bmrt fcvwxyo f14ptb23 f9dbb4x f3qs60o fwd1oij f5u9ap2 f1cyfu5x f1h3a8gf fj8k9ua fifrq0d f196mwp7 f1l6uprw fnekfq fa9u7a5 f1xxg0vq f16oldlo f17g64ui fjvf891 fqbrke7 f1efp33f fdrzuqr f15x8b5r fphbwmw f19vpps7 fv5swzo f1al02dq f8w4c43 f1ol4fw6 f1q1lw4e f1dwjv2g f127ot8j f19etb0b f4f984j f3d22hf fw441p0 f1m71e0y f1gue8i f17t0x8g f194v5ow f1qgg65p fk7jm04 fhgccpy f32wu9k fu5nqqq f13prjl2 f1czftr5 f1nl83rv fixhny3 feygou5"
            disabled=""
            title="Save"
            type="submit"
          >
            Save
          </button>
          <button
            aria-label="Cancel"
            class="fui-Button r1alrhcs"
            data-tabster="{"restorer":{"type":1}}"
            title="Cancel"
            type="button"
          >
            Cancel
          </button>
        </div>
      </div>
    </form>
  </div>
  <span
    hidden=""
  />
  <div
    class="fui-FluentProvider fui-FluentProvider_r_0_ ___jdtuxv0_17k0bs4 f19n0e5 fxugw4r f1o700av fk6fouc fkhj508 figsok6 f1i3iumi"
    dir="ltr"
  >
    <div
      data-testid="test-ModalDialog"
    >
      <span
        hidden=""
      />
    </div>
  </div>
</DocumentFragment>
`;
